# cargo-collect

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  rust.yml
src/: cli.rs  collect_packages.rs  download_packages.rs  main.rs  parse_lock_file.rs  spinners.rs
src/parse_cargo_files/: cargo_toml_file.rs  mod.rs  parse_lock_file.rs
