[package]
name = "cargo-collect"
version = "0.1.1"
edition = "2021"
repository = "https://gitlab.com/TalRoni/cargo-collect"
homepage = "https://gitlab.com/TalRoni/cargo-collect"
description = "Cargo tool for download crate file and its dependencies recursively."
authors = ["Tal Y Roni <tal.inon.16@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates-index = "0.19"
clap = { version = "4.1", features = ["derive"] }
semver = "1.0"
tokio = { version = "1.26", features = ["full"] }
anyhow = "1.0"
itertools = "0.10"
env_logger = "0.10"
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"]}
reqwest = "0.11"
sha2 = "0.10"
futures = "0.3"
indicatif = "0.17"
tokio-test = "0.4.4"
